# ups-server

./: CMakeLists.txt  Makefile
src/client/: client.c  client.h
src/client/client_functions/: client_functions.c  client_functions.h
src/client/list/: linkedlist.c  linkedlist.h
src/game/feed/: feed.c  feed.h
src/game/room/: room.c  room.h
src/headers/: dec.h  glob.h
src/main/: main.c
src/server/: server.c  server.h  server_def.h
src/server/config_server/: config_server.c  config_server.h
src/server/server_functions/: server_functions.c  server_functions.h
